@@ -1,3 +1,8 @@
+2007-07-09  Ales Hakl  <ales at hakl dot net>
+
+	* dfsch/magic.h (DFSCH_UNWIND): unwind-protect like construction
+	for C code.
+
 2007-07-01  Ales Hakl  <ales at hakl dot net>
 
 	* src/repl.c: Transcript support
